--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -12,4 +12,6 @@ library
     hs-source-dirs:     src
     default-language:   Haskell2010
 
+    exposed-modules:    Coinbase.Exchange.Types
+
     build-depends:      base                ==4.7.*
