--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -15,3 +15,14 @@ library
     exposed-modules:    Coinbase.Exchange.Types
 
     build-depends:      base                ==4.7.*
+                    ,   mtl                 ==2.2.*
+                    ,   resourcet           ==1.1.*
+
+executable sandbox
+    main-is:            Main.hs
+    hs-source-dirs:     sandbox
+    default-language:   Haskell2010
+
+    build-depends:      base                ==4.7.*
+
+                    ,   coinbase-exchange
