--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -20,7 +20,7 @@ library
 
 executable sandbox
     main-is:            Main.hs
-    hs-source-dirs:     sandbox
+    hs-source-dirs:     sbox
     default-language:   Haskell2010
 
     build-depends:      base                ==4.7.*
