--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -14,10 +14,19 @@ library
 
     exposed-modules:    Coinbase.Exchange.Types
 
+    other-modules:      Coinbase.Exchange.Rest
+
     build-depends:      base                ==4.7.*
                     ,   mtl                 ==2.2.*
                     ,   resourcet           ==1.1.*
                     ,   transformers-base   ==0.4.*
+                    ,   conduit             ==1.2.*
+                    ,   conduit-extra       ==1.1.*
+                    ,   http-conduit        ==2.1.*
+                    ,   aeson               ==0.8.*
+                    ,   http-types          ==0.8.*
+                    ,   text                ==1.2.*
+                    ,   bytestring          ==0.10.*
 
 executable sandbox
     main-is:            Main.hs
@@ -25,5 +34,8 @@ executable sandbox
     default-language:   Haskell2010
 
     build-depends:      base                ==4.7.*
+                    ,   conduit
+                    ,   conduit-extra
+                    ,   http-conduit
 
                     ,   coinbase-exchange
