--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -12,7 +12,8 @@ library
     hs-source-dirs:     src
     default-language:   Haskell2010
 
-    exposed-modules:    Coinbase.Exchange.Types
+    exposed-modules:    Coinbase.Exchange.MarketData
+                    ,   Coinbase.Exchange.Types
 
     other-modules:      Coinbase.Exchange.Rest
 
@@ -24,9 +25,11 @@ library
                     ,   conduit-extra       ==1.1.*
                     ,   http-conduit        ==2.1.*
                     ,   aeson               ==0.8.*
+                    ,   aeson-casing        ==0.1.*
                     ,   http-types          ==0.8.*
                     ,   text                ==1.2.*
                     ,   bytestring          ==0.10.*
+                    ,   time                ==1.4.*
 
 executable sandbox
     main-is:            Main.hs
@@ -34,8 +37,12 @@ executable sandbox
     default-language:   Haskell2010
 
     build-depends:      base                ==4.7.*
+                    ,   http-client         ==0.4.*
+                    ,   http-client-tls     ==0.2.*
+
                     ,   conduit
                     ,   conduit-extra
                     ,   http-conduit
+                    ,   resourcet
 
                     ,   coinbase-exchange
