--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -31,6 +31,9 @@ library
                     ,   bytestring          ==0.10.*
                     ,   time                ==1.4.*
                     ,   scientific          ==0.3.*
+                    ,   uuid                ==1.3.*
+                    ,   uuid-aeson          ==0.1.*
+                    ,   vector              ==0.10.*
 
 executable sandbox
     main-is:            Main.hs
