--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -13,6 +13,7 @@ library
     default-language:   Haskell2010
 
     exposed-modules:    Coinbase.Exchange.MarketData
+                    ,   Coinbase.Exchange.Socket
                     ,   Coinbase.Exchange.Types
 
     other-modules:      Coinbase.Exchange.Rest
@@ -47,6 +48,8 @@ executable sandbox
                     ,   http-client-tls     ==0.2.*
 
                     ,   text
+                    ,   aeson
+                    ,   bytestring
                     ,   time
                     ,   old-locale
                     ,   conduit
@@ -56,5 +59,5 @@ executable sandbox
                     ,   websockets
                     ,   transformers
                     ,   network
-                    
+
                     ,   coinbase-exchange
