Successful connection with wuss.

--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -62,6 +62,7 @@ executable sandbox
                     ,   websockets
                     ,   transformers
                     ,   network
+                    ,   wuss
 
                     ,   coinbase-exchange
 
