--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -70,6 +70,7 @@ test-suite test-coinbase
     type:               exitcode-stdio-1.0
     main-is:            Main.hs
     hs-source-dirs:     test
+    default-language:   Haskell2010
 
     build-depends:      base                ==4.7.*
                     ,   tasty               ==0.10.*
@@ -77,6 +78,8 @@ test-suite test-coinbase
                     ,   tasty-quickcheck    ==0.8.*
                     ,   tasty-hunit         ==0.9.*
 
+                    ,   time
+                    ,   old-locale
                     ,   http-client-tls
                     ,   http-conduit
                     ,   transformers
