--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -40,6 +40,9 @@ library
                     ,   vector              ==0.10.*
                     ,   hashable            ==1.2.*
                     ,   deepseq             ==1.3.*
+                    ,   network             ==2.6.*
+                    ,   websockets          ==0.9.*
+                    ,   wuss                ==1.0.*
 
                     ,   old-locale
 
