--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -13,9 +13,11 @@ library
     default-language:   Haskell2010
 
     exposed-modules:    Coinbase.Exchange.MarketData
+                    ,   Coinbase.Exchange.Private
                     ,   Coinbase.Exchange.Socket
                     ,   Coinbase.Exchange.Types.Core
                     ,   Coinbase.Exchange.Types.MarketData
+                    ,   Coinbase.Exchange.Types.Private
                     ,   Coinbase.Exchange.Types.Socket
                     ,   Coinbase.Exchange.Types
 
@@ -84,6 +86,7 @@ test-suite test-coinbase
                     ,   tasty-quickcheck    ==0.8.*
                     ,   tasty-hunit         ==0.9.*
 
+                    ,   bytestring
                     ,   time
                     ,   old-locale
                     ,   http-client-tls
