--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -35,6 +35,7 @@ library
                     ,   http-types          ==0.8.*
                     ,   text                ==1.2.*
                     ,   bytestring          ==0.10.*
+                    ,   base64-bytestring   ==1.0.*
                     ,   time                ==1.4.*
                     ,   scientific          ==0.3.*
                     ,   uuid                ==1.3.*
@@ -45,6 +46,8 @@ library
                     ,   network             ==2.6.*
                     ,   websockets          ==0.9.*
                     ,   wuss                ==1.0.*
+                    ,   cryptohash          ==0.11.*
+                    ,   byteable            ==0.1.*
 
                     ,   old-locale
 
