--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -1,5 +1,5 @@
 name:                coinbase-exchange
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Connector library for the coinbase exchange.
 description:         Access library for the coinbase exchange. Allows the use
                      of both the public market data API as well as the private
@@ -28,31 +28,31 @@ library
 
     other-modules:      Coinbase.Exchange.Rest
 
-    build-depends:      base                ==4.7.*
-                    ,   mtl                 ==2.2.*
-                    ,   resourcet           ==1.1.*
-                    ,   transformers-base   ==0.4.*
-                    ,   conduit             ==1.2.*
-                    ,   conduit-extra       ==1.1.*
-                    ,   http-conduit        ==2.1.*
-                    ,   aeson               ==0.8.*
-                    ,   aeson-casing        ==0.1.*
-                    ,   http-types          ==0.8.*
-                    ,   text                ==1.2.*
-                    ,   bytestring          ==0.10.*
-                    ,   base64-bytestring   ==1.0.*
-                    ,   time                ==1.4.*
-                    ,   scientific          ==0.3.*
-                    ,   uuid                ==1.3.*
-                    ,   uuid-aeson          ==0.1.*
-                    ,   vector              ==0.10.*
-                    ,   hashable            ==1.2.*
-                    ,   deepseq             ==1.3.*
-                    ,   network             ==2.6.*
-                    ,   websockets          ==0.9.*
-                    ,   wuss                ==1.0.*
-                    ,   cryptohash          ==0.11.*
-                    ,   byteable            ==0.1.*
+    build-depends:      base                ==4.*
+                    ,   mtl
+                    ,   resourcet
+                    ,   transformers-base
+                    ,   conduit
+                    ,   conduit-extra
+                    ,   http-conduit
+                    ,   aeson
+                    ,   aeson-casing
+                    ,   http-types
+                    ,   text
+                    ,   bytestring
+                    ,   base64-bytestring
+                    ,   time
+                    ,   scientific
+                    ,   uuid
+                    ,   uuid-aeson
+                    ,   vector
+                    ,   hashable
+                    ,   deepseq
+                    ,   network
+                    ,   websockets
+                    ,   wuss
+                    ,   cryptohash
+                    ,   byteable
 
                     ,   old-locale
 
@@ -61,9 +61,9 @@ executable sandbox
     hs-source-dirs:     sbox
     default-language:   Haskell2010
 
-    build-depends:      base                ==4.7.*
-                    ,   http-client         ==0.4.*
-                    ,   http-client-tls     ==0.2.*
+    build-depends:      base                ==4.*
+                    ,   http-client
+                    ,   http-client-tls
 
                     ,   uuid
                     ,   text
@@ -89,11 +89,11 @@ test-suite test-coinbase
     hs-source-dirs:     test
     default-language:   Haskell2010
 
-    build-depends:      base                ==4.7.*
-                    ,   tasty               ==0.10.*
-                    ,   tasty-th            ==0.1.*
-                    ,   tasty-quickcheck    ==0.8.*
-                    ,   tasty-hunit         ==0.9.*
+    build-depends:      base                ==4.*
+                    ,   tasty
+                    ,   tasty-th
+                    ,   tasty-quickcheck
+                    ,   tasty-hunit
 
                     ,   uuid
                     ,   bytestring
