Added runner that converts Lefts into Exceptions.

--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -53,6 +53,7 @@ library
                     ,   wuss
                     ,   cryptohash
                     ,   byteable
+                    ,   exceptions
 
                     ,   old-locale
 
