--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -29,7 +29,7 @@ library
     other-modules:      Coinbase.Exchange.Rest
 
     build-depends:      base                ==4.*
-                    ,   mtl
+                    ,   mtl                 >=2.2
                     ,   resourcet
                     ,   transformers-base
                     ,   conduit
@@ -41,7 +41,7 @@ library
                     ,   text
                     ,   bytestring
                     ,   base64-bytestring
-                    ,   time
+                    ,   time                >=1.5
                     ,   scientific
                     ,   uuid
                     ,   uuid-aeson
