--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -11,7 +11,7 @@ author:              Andrew Rademacher
 maintainer:          andrewrademacher@gmail.com
 category:            Web
 build-type:          Simple
-cabal-version:       >=1.10
+cabal-version:       >=1.20
 
 library
     hs-source-dirs:     src
@@ -35,7 +35,7 @@ library
                     ,   conduit
                     ,   conduit-extra
                     ,   http-conduit
-                    ,   aeson
+                    ,   aeson               >=0.10.0
                     ,   aeson-casing
                     ,   http-types
                     ,   text
