still revamping tests
I’m committing to save, not done yet. Something is wrong with getFills.

--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -103,5 +103,7 @@ test-suite test-coinbase
                     ,   http-client-tls
                     ,   http-conduit
                     ,   transformers
+                    ,   random
+                    ,   scientific
 
                     ,   coinbase-exchange
