added websocket tests
Added a websocket stream parsing test. The websocket parsing code fail
when it receives a message corresponding to a market order.

--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -105,5 +105,8 @@ test-suite test-coinbase
                     ,   transformers
                     ,   random
                     ,   scientific
+                    ,   async
+                    ,   websockets
+                    ,   aeson
 
                     ,   coinbase-exchange
