new JSON parsing code for web sockets
In the middle of it. Failing tests right now. Still need
to fix parsing of a 'funds' or 'size' field containing a
JSON 'null'.

--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -88,6 +88,7 @@ test-suite test-coinbase
     type:               exitcode-stdio-1.0
     main-is:            Main.hs
     hs-source-dirs:     test
+    ghc-options:        -threaded
     default-language:   Haskell2010
 
     build-depends:      base                ==4.*
