--- a/coinbase-exchange.cabal
+++ b/coinbase-exchange.cabal
@@ -28,7 +28,7 @@ library
 
     other-modules:      Coinbase.Exchange.Rest
 
-    build-depends:      base
+    build-depends:      base    >= 4 && < 5
                     ,   mtl
                     ,   resourcet
                     ,   transformers-base
@@ -63,7 +63,7 @@ executable sandbox
     hs-source-dirs:     sbox
     default-language:   Haskell2010
 
-    build-depends:      base
+    build-depends:      base    >= 4 && < 5
                     ,   http-client
                     ,   http-client-tls
 
@@ -97,7 +97,7 @@ test-suite test-coinbase
                         Coinbase.Exchange.Private.Test
                         Coinbase.Exchange.Socket.Test
 
-    build-depends:      base
+    build-depends:      base    >= 4 && < 5
                     ,   tasty
                     ,   tasty-th
                     ,   tasty-quickcheck
